--- a/main.html
+++ b/main.html
@@ -14,14 +14,14 @@
 
     <form class="row g-3">
         <div class="col-md-4">
-          <label for="first-name-input" class="form-label">First name</label>
+          <label for="first-name-input" class="form-label">First Name</label>
           <input type="text" class="form-control is-invalid" id="first-name-input" required>
           <div class="invalid-feedback">
             First name required!
           </div>
         </div>
         <div class="col-md-4">
-          <label for="last-name-input" class="form-label">Last name</label>
+          <label for="last-name-input" class="form-label">Last Name</label>
           <input type="text" class="form-control is-invalid" id="last-name-input" required>
           <div class="invalid-feedback">
             Last name required!
@@ -42,8 +42,8 @@
             </div>
         </div>
         <div class="col-md-3">
-            <label for="graduation-year" class="form-label">Graduation Year</label>
-            <select class="form-select is-invalid" id="graduation-year" aria-describedby="validationServer04Feedback" required>
+            <label for="grad-year-select" class="form-label">Graduation Year</label>
+            <select class="form-select is-invalid" id="grad-year-select" aria-describedby="validationServer04Feedback" required>
                 <option selected disabled value="">Choose...</option>
                 <option>2020</option>
                 <option>2021</option>
